--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -17,6 +17,11 @@
 
 <div id="media">
 <h1>Social Media</h1>
+<div id="social-icons">
+<a href="http://www.linkedin.com/in/maria-lopez-21449877?trk=nav_responsive_tab_profile_pic"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-linkedin-128.png" width="48" height="48" alt="LinkedIn" /></a>
+<a href="http://www.facebook.com/profile.php?id=593356158"><img src="https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/facebook-128.png" width="48" height="48" alt="Facebook" /></a>
+<a href="http://plus.google.com/u/0/110790196055547541075/posts"><img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/square-google-plus-128.png" width="48" height="48" alt="Google+"/></a>
+</div>
 </div>
 
 
