--- a/Resume.html
+++ b/Resume.html
@@ -27,11 +27,18 @@
 <!-- Experience -->
 
 	<div id="DTI">
-	<ul><h1>Experience</h1></ul>
-		<li>Contract Support Specialist</li>
-		<li>Diversitech, Inc.</li>
-		<li>Fairborn, OH</li>
-	<p><i>February 2015 - Present</i></p>
+		<h1>Experience</h1>
+		<div class = "row">
+		<div class = "col-md-4">
+			<p>Contract Support Specialist</p>
+		<div class = "col-md-4">
+			<p>Diversitech, Inc.</p>
+		<div class = "col-md-4">
+			<p>Fairborn, OH</p>
+		<div class = "col-md-4">
+			<p><i>February 2015 - Present</i></p>
+		</div>	
+		</div>
 	<p>Monitor the account balances and progression of work in 16 labs at Wright Patterson Air Force Base</p>
 	</div>
 
