--- a/Resume.html
+++ b/Resume.html
@@ -82,3 +82,10 @@
 </div>
 </body>
 </HTML>
+   iframe = document.createElement("iframe")
+    #Fix courtesy of github user kwaak (https://github.com/webBoxio/atom-html-preview/issues/1/#issuecomment-49639162)
+    #This allows use of relative scripts and css files
+    iframe.setAttribute("sandbox", "allow-scripts allow-same-origin")
+    iframe.src = @getPath()
+    @html $ iframe
+    @trigger('atom-html-preview:html-changed')
